--- a/resources/web/model/index.html
+++ b/resources/web/model/index.html
@@ -25,7 +25,7 @@
 
 <div id="EmptyArea">
 	<div><img src="img/null.png"></div>
-	<div>no model information</div>
+	<div>no model information :D</div>
 </div>
 	
 <div id="WholeArea">
